--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url("/HeroImagelg.png");
+  background-image: url("/HeroImagelg.webp");
   height: 800px;
 
   width: 100%;
